# notes-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agent.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: Settings-前端设计交接.md  交接.md  前端设计参考资料.md  开发规范.md  设计文档.md  踩坑记录.md  配置.md  需求分析.md
notes_mcp/: __init__.py  __main__.py  chunker.py  cli.py  config.py  embedder.py  indexer.py  search.py  server.py
scripts/: check_server.py  dev.py
tests/: __init__.py  conftest.py  test_agent.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_fake_embedder.py  test_indexer.py  test_search.py  test_server.py
web/backend/: pom.xml
web/backend/src/main/java/com/notesmcp/backend/: ChatController.java  ChatHistoryService.java  ChatRequest.java  ChatResponse.java  CorsConfig.java  FileTreeNode.java  McpToolService.java  NotesController.java  NotesMcpBackendApplication.java  ProviderRouter.java  SessionController.java  SettingsController.java  SettingsData.java  SettingsService.java
web/backend/src/main/resources/: application.yml
web/frontend/: package-lock.json
web/frontend/src/: App.css  App.tsx  index.css  main.tsx
web/frontend/src/api/: client.ts  settings.ts
web/frontend/src/components/: ChatArea.tsx  ChatInput.tsx  Header.tsx  InfoPanel.tsx  MarkdownRenderer.tsx  SessionList.tsx  SettingsDrawer.tsx  Sidebar.tsx  SourceCitation.tsx  WelcomeState.tsx
web/frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LearningPage.tsx  NoteDetailPage.tsx
web/frontend/src/types/: index.ts
